public/style.css
* {
  box-sizing: border-box;
}

body {
  font-family: sans-serif;
}

a {
  text-decoration: none;
  color: black;
}

label {
  display: block;
}

nav a {
  display: inline-block;
  margin: 1em;
}

form div {
  margin: 1em;
  display: inline-block;
}

img {
  max-width: 100%;
  max-height: 100%;
}

/* ---- NavBar ---- */

.checkoutAndBadge {
  width: max-content;
}

.totalBadge {
  background-color: darkgrey;
  color: white;
  padding: 0.2em;
  border: 1px solid darkgrey;
  border-radius: 5px;
}

.totalBadge.hidden {
  display: none;
}

/* ---- AllProducts ---- */

.productsAndCart {
  display: flex;
  justify-content: center;
  width: 1200px;
  margin: 0 auto;
}

.allProductContainer {
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  justify-content: center;
  max-width: 760px;
}

.cartContainer {
  min-width: 300px;
  margin: 0.3em;
}

/* ---- ProductCard ---- */

.productContainer {
  height: auto;
  width: 240px;
  display: flex;
  flex-direction: column;
  border: 1px solid black;
  padding: 0.5em;
  margin: 0.3em;
}

.productContainer * {
  margin: 0.3em 0;
}

.productContainer img {
  height: 200px;
  width: auto;
}

.productContainer .nameAndPrice {
  display: flex;
  flex-wrap: nowrap;
  align-items: baseline;
  justify-content: space-between;
}

.productName {
  font-weight: bold;
  max-width: 120px;
}

/* ---- SingleProduct ---- */

.sp-view-container {
  display: flex;
  justify-content: center;
  margin: 0 auto;
}

.backToAllProducts {
  margin-bottom: 0.5em;
}

.singleProductContainer {
  display: flex;
  flex-direction: column;
  min-width: 600px;
}

.buyupContainer {
  min-height: 3em;
}

.imgAndDescription {
  display: flex;
}

.imgAndDescription img {
  height: 100%;
  width: auto;
  max-height: 240px;
  align-self: center;
}

.descriptionSidePanel {
  display: flex;
  flex-direction: column;
  max-width: 400px;
  padding: 0.5em;
}

.descriptionSidePanel * {
  margin: 0.5em 0;
}

.productName {
  font-weight: bold;
}

.quantityContainer {
  display: flex;
  flex-direction: column;
  width: 200px;
  margin: 0 auto;
}

.quantityValueAndBtns {
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.cartContainer {
  position: sticky;
  top: 2em;
  min-width: 320px;
  height: 70vh;
  border: 1px solid black;
}

.cartTitle {
  margin: 0.3em;
}

.cartContainer .checkoutBtn {
  position: absolute;
  bottom: -2em;
  left: 38%;
}

/* ---- Cart ---- */

.cartBox {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  height: 78%;
  width: 100%;
  padding: 0.3em;
  overflow-y: auto;
}

.myCartAndClearCartBtn {
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.totalContainer {
  margin: 1em;
  margin-bottom: 0;
}

/* ---- CartProductCard ---- */

.cartProductContainer {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: space-between;
  height: 4em;
  width: 300px;
  margin: 0.5em;
  padding: 0.5em;
  border: 1px solid black;
}

.imgAndPurchaseDetails {
  display: flex;
  height: 3em;
}

.imgAndPurchaseDetails img {
  height: 100%;
  width: auto;
  max-width: 80px;
  margin-right: 0.5em;
}

.cartProductContainer .nameAndPrice {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: min-content;
  margin: 0 0.5em;
}

.nameAndPrice .productPrice {
  margin-top: 0.3em;
}

.productName {
  font-weight: normal;
}

.cartProductContainer .quantityAndBtns {
  display: flex;
  width: 100px;
  align-items: center;
  justify-content: space-around;
}

/* ---- Profile ---- */

.profileContainer {
  flex-grow: 100;
}

.ordersLabel {
  margin-top: 1em;
}

.singleUserContainer {
}

.profileLabel {
  margin-top: 1em;
}

.userProfileContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 100px;
  border: 1px solid black;
}

/* --- All Orders --- */

.userOrdersContainer {
  display: flex;
  overflow-x: auto;
  align-items: end;
  min-height: 325px;
  border: 1px solid black;
}

/* ---- Order Card ---- */

.orderContainer {
  height: auto;
  min-height: 300px;
  width: 240px;
  display: flex;
  flex-direction: column;
  border: 1px solid black;
  padding: 0.5em;
  position: relative;
  background-color: #fff;
}

.orderContainer,
.orderContainer::before,
.orderContainer::after {
  /* Add shadow to distinguish sheets */
  box-shadow: 2px 1px 1px rgba(0, 0, 0, 0.15);
}

.orderContainer::before,
.orderContainer::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: #eee;
}

/* Second sheet */
.orderContainer::before {
  left: 7px;
  top: -5px;
  z-index: -1;
  border: 1px solid black;
}

/* Third sheet */
.orderContainer::after {
  left: 12px;
  top: -10px;
  z-index: -2;
  border: 1px solid black;
}

.orderContainer * {
  margin: 0.3em 0;
}

.orderContainer img {
  height: 200px;
  width: 100%;
}

.orderName {
  font-weight: bold;
}

/* ---- Ads ---- */

.userAndAds {
  display: flex;
}

.headerAdsContainer {
  min-height: 70px;
  border: 1px solid black;
}

.advertisementSidePanel {
  width: 200px;
  border: 1px solid black;
}

/* ---- All Users ---- */

table {
  font-family: Arial, Helvetica, sans-serif;
  border-collapse: collapse;
  width: 100%;
}

table td,
table th {
  border: 1px solid #ddd;
  padding: 8px;
}

table tr:nth-child(even) {
  background-color: #f2f2f2;
}

table tr:hover {
  background-color: #ddd;
}

table th {
  padding-top: 12px;
  padding-bottom: 12px;
  text-align: center;
  background-color: #4caf50;
  color: white;
}

/* Checkout */

.checkout-view-container {
  display: flex;
  max-width: 1200px;
  margin: 0 auto;
  padding: 0;
}

.productsAndCk {
  display: flex;
  justify-content: center;
  width: 1200px;
  margin: 0 auto;
}

/* ---- ShippingData ---- */

.shippingData {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  width: 600px;
}

.shippingData * {
  margin-top: 0;
}

.shippingData textarea {
  width: 300px;
  height: 100px;
  resize: vertical;
  padding: 0.5em;
  border: 2px solid black;
}

.formField * {
  width: 300px;
}

.formField input[type='text'] {
  height: 2em;
  font-size: 18px;
  padding: 0 1em;
}

